bugfix; upload/cancel button break. Added a minimum gap as well

--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -135,11 +135,13 @@
     background-color: rgba(236, 236, 236, 0.5);
   }
 
-  &__btn-content {
+  &__button-content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     margin-bottom: 2rem;
 
     @include tablet {
-      display: flex;
       align-items: center;
       flex-direction: row-reverse;
       gap: 3rem;
@@ -153,15 +155,10 @@
 
   &__publish {
     @include button;
+    justify-content: center;
     width: 100%;
     padding: 1rem;
-    text-transform: uppercase;
     font-size: 0.875rem;
-    font-weight: 700;
-    color: #ffffff;
-    background-color: #0095ff;
-    border: none;
-    border-radius: 5px;
 
     @include tablet {
       width: 10rem;
